--- a/app/src/main/res/layout/activity_route_build.xml
+++ b/app/src/main/res/layout/activity_route_build.xml
@@ -14,22 +14,39 @@
         tools:context=".UI.RouteBuildActivity" />
 
     <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent">
-        <Button
-            android:id="@+id/reloadRouteButton"
-            android:text="Load directions"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+        android:layout_width="50dp"
+        android:layout_height="match_parent"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true">
 
         <Button
-            android:id="@+id/saveRouteButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:id="@+id/play_route_button"
+            android:layout_width="wrap_content"
+            android:layout_height="57dp"
             android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:text="Save route"
-            android:layout_alignParentLeft="true" />
+            android:layout_marginBottom="130dp"
+            android:drawableTop="@drawable/baseline_play_arrow_black_36dp" />
 
+        <Button
+            android:id="@+id/reload_route_button"
+            android:layout_width="wrap_content"
+            android:layout_height="57dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="130dp"
+            android:drawableTop="@drawable/baseline_directions_black_36dp" />
+
+        <Button
+            android:id="@+id/save_route_button"
+            android:layout_width="wrap_content"
+            android:layout_height="57dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:drawableTop="@drawable/baseline_save_black_36dp" />
     </RelativeLayout>
 </RelativeLayout>
