--- a/app/src/main/res/menu/route_list_menu.xml
+++ b/app/src/main/res/menu/route_list_menu.xml
@@ -2,11 +2,15 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <!--<item
+        android:id="@+id/route_list_menu_delete"
+        android:title="@string/ROUTE_LIST_MENU_DELETE_ROUTE" />-->
+
     <item
-        android:id="@+id/route_list_menu_create_route"
-        android:title="Create new route" />
+        android:id="@+id/route_list_menu_edit"
+        android:title="@string/ROUTE_LIST_MENU_EDIT_ROUTE" />
 
     <item
         android:id="@+id/route_list_menu_about"
-        android:title="About" />
+        android:title="@string/ROUTE_LIST_MENU_ABOUT" />
 </menu>
