--- a/app/src/main/res/values/lang_en.xml
+++ b/app/src/main/res/values/lang_en.xml
@@ -2,4 +2,16 @@
 <resources>
     <string name="ROUTE_BUILD_SNACKBAR_1">Choose start point</string>
     <string name="ROUTE_BUILD_SNACKBAR_2">Choose end point</string>
+    <string name="ROUTE_BUILD_LOAD_DIRECTIONS_BUTTON">SHOW</string>
+    <string name="ROUTE_BUILD_SAVE_ROUTE_BUTTON">SAVE</string>
+    <string name="ROUTE_BUILD_PLAY_ROUTE_BUTTON">PLAY</string>
+    <string name="ROUTE_LIST_MENU_ABOUT">About</string>
+    <string name="ROUTE_LIST_MENU_DELETE_ROUTE">Delete route</string>
+    <string name="ROUTE_LIST_MENU_EDIT_ROUTE">Edit route</string>
+    <string name="PLAYER_BUTTON_RESTART">Restart</string>
+    <string name="PLAYER_BUTTON_BACK">Back</string>
+    <string name="ROUTE_CREATE_HINT_NAME">Route name</string>
+    <string name="ROUTE_CREATE_HINT_FPS">FPS</string>
+    <string name="ROUTE_CREATE_BUTTON">CREATE</string>
+    <string name="ROUTE_CREATE_BUTTON_SAVE">SAVE</string>
 </resources>
